# spaghettree

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci_tests.yaml
docs/: dev_readme.md
mock_package/src/mock_package/: module_a.py  module_b.py
src/spaghettree/: __init__.py  __main__.py  data_structures.py  io.py  metrics.py  plotting.py  processing.py  search.py  utils.py
src/spaghettree/adapters/: io_wrapper.py
src/spaghettree/domain/: adj_mat.py  entities.py  globals.py  imports.py  optimisation.py  parsing.py  processing.py  visitors.py
src/spaghettree/domain_layer/: data_structures.py  domain_transformations.py
src/spaghettree/input_layer/: io.py
src/spaghettree/optimisation_layer/: metrics.py  processing.py  search.py
src/spaghettree/output_layer/: plotting.py  save_results.py
src/spaghettree/v2/: __init__.py  __main__.py
src/spaghettree/v2/adapters/: io_wrapper.py
src/spaghettree/v2/domain/: cst_parsing.py  entities.py  globals.py  optimisation.py  parsing.py  processing.py  visitors.py
src/spaghettree/v2/domain/cst_parsing/: __main__.py  adj_mat.py  entities.py  globals.py  imports.py  lib.py  optimisation.py  processing.py  visitors.py
tests/: test_main.py
tests/adapters/: test_adapter_apis.py
