[project]
name = "spaghettree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ed cuss", email = "edcussmusic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.1.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "libcst>=1.6.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pydot>=3.0.4",
    "returns>=0.24.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.scripts]
spaghettree = "spaghettree:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.9",
]
research = [
    "attrs==25.1.0",
    "black==25.1.0",
    "faker==37.1.0",
    "fastapi==0.115.12",
    "manimgl==1.7.2",
    "pydantic==2.11.3",
    "pytest==8.3.4",
    "pre-commit==4.1.0",
    "poetry==2.1.2",
    "prophet==1.1.6",
    "rich==14.0.0",
    "textual==3.1.0",
    "locust==2.35.0",
    "typer==0.15.2",
    "class-inspector==0.3.1",
    "icecream==2.1.4",
    "dynaconf==3.2.10",
    "pipx==1.7.1",
    "more-itertools==10.6.0",
    "urllib3==2.4.0",
    "pyupgrade==3.19.1",
    "tox==4.25.0",
    "beartype>=0.20.2",
]
